[package]
name = "cortex-m-interrupt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-interrupt-macro = { path = "./cortex-m-interrupt-macro" }
cortex-m = "0.7"

[dev-dependencies]
stm32f1xx-hal = { version = "0.9", features = [ "stm32f107" ] }
