[package]
name = "cortex-m-interrupt"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["unstable-doc-cfg"]

[features]
unstable = [ ]
unstable-doc-cfg = [ ]

[dependencies]
cortex-m-interrupt-macro = { path = "./cortex-m-interrupt-macro" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
doc-cfg = "0.1"

[dev-dependencies]
stm32f1xx-hal = { version = "0.9", features = [ "stm32f107" ] }

[[example]]
name = "take_nvic_interrupt"
required-features = [ "unstable" ]