[package]
name = "cortex-m-interrupt-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = [ "full", "printing" ] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
cortex-m = "0.7"
