[package]
name = "cortex-m-interrupt-macro"
version = "0.2.1-git"
edition = "2021"
authors = [ "Johannes Draaijer <jcdra1@gmail.com>", "Emil Fresk <emil.fresk@gmail.com>" ]
description = "Macros for the cortex-m-interrupt crate"
keywords = [ "embedded", "cortex-m", "interrupt" ]
categories = [ "embedded", "no-std" ]
documentation = "https://docs.rs/cortex-m-interrupt"
homepage = "https://github.com/datdenkikniet/cortex-m-interrupt"
repository = "https://github.com/datdenkikniet/cortex-m-interrupt"
license = "MIT OR Apache-2.0"


[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = [ "full", "printing" ] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
