[package]
name = "cortex-m-interrupt"
version = "0.2.0"
edition = "2021"
authors = [ "Johannes Draaijer <jcdra1@gmail.com>", "Emil Fresk <emil.fresk@gmail.com>" ]
description = "Function-like, trait-based interrupt handler registration."
keywords = [ "embedded", "cortex-m", "interrupt" ]
categories = [ "embedded", "no-std" ]
homepage = "https://github.com/datdenkikniet/cortex-m-interrupt"
documentation = "https://docs.rs/cortex-m-interrupt"
repository = "https://github.com/datdenkikniet/cortex-m-interrupt"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m-interrupt-macro = "0.2.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"

[dev-dependencies]
stm32f1xx-hal = { version = "0.9", features = [ "stm32f107" ] }
