[package]
name = "cortex-m-interrupt"
version = "0.3.0"
edition = "2021"
authors = [ "Johannes Draaijer <jcdra1@gmail.com>", "Emil Fresk <emil.fresk@gmail.com>" ]
description = "Function-like, trait-based interrupt handler registration."
keywords = [ "embedded", "cortex-m", "interrupt" ]
categories = [ "embedded", "no-std" ]
homepage = "https://github.com/datdenkikniet/cortex-m-interrupt"
documentation = "https://docs.rs/cortex-m-interrupt"
repository = "https://github.com/datdenkikniet/cortex-m-interrupt"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m-interrupt-macro = { path = "../cortex-m-interrupt-macro", version = "0.3.0" }

[dev-dependencies]
stm32f1xx-hal = { version = "0.9", features = [ "stm32f107" ] }
